# HPCI-Quant-Project

./: .env.example  CMakeLists.txt  README.md
include/ob/: events.hpp  level.hpp  order.hpp  order_book.hpp  symbol_book.hpp  types.hpp
include/ob/ingest/: itch.hpp  soupbin.hpp
src/: itch_ingest_main.cc  main.cc  order_book.cc  symbol_book.cc
src/ingest/: itch.cc  soupbin.cc
tests/: test_order_book.cc
